fix spill

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   padding-top: 5rem; 
   font-family: sans-serif;
   background: linear-gradient(75deg, rgb(0, 0, 0), rgb(50, 4, 50));
-  hight: 100%;
+  height: 100%;
 }
 
 
